Fix Scroll Buttons.

--- a/home.html
+++ b/home.html
@@ -1,3 +1,13 @@
+<!-- Scroll Button -->
+<div id="scroll">
+	<button ng-click="scroll('up')" type="button" id="scroll-up" class="btn btn-default btn-sm" disabled="disabled">
+		<i class="fa fa-angle-double-up fa-3x"></i>
+	</button>
+	<button ng-click="scroll('down')" type="button" id="scroll-down" class="btn btn-default btn-sm">
+		<i class="fa fa-angle-double-down fa-3x"></i>
+	</button>
+</div>
+
 <div id="intro">
 	<h1><i class="fa fa-search"></i>about.me</h1>
 	<ul class="ch-grid">
