--- a/project.html
+++ b/project.html
@@ -1,3 +1,19 @@
-<div id="blog">
-	<img src="img/comingsoon.png">
+<div id="project">
+	<h1><i class="fa fa-file-text-o"></i>project.list</h1>
+
+<div ng-repeat="project in projects" class="row">
+  <div ng-repeat="p in project" class="col-md-4 project-entry">
+    <div class="thumbnail">
+      <img ng-src="img/{{p.img}}">
+      <div class="caption">
+        <h3>{{p.name}}</h3>
+        <p>{{p.description}}</p>
+        <p><button ng-repeat="l in p.lang" type="button" class="btn btn-default">{{l}}</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+	
 </div>
