Few small changes.

--- a/home.html
+++ b/home.html
@@ -8,6 +8,13 @@
 	</button>
 </div>
 
+<div class="alert alert-info alert-dismissible pull-right" role="alert">
+	<button type="button" class="close" data-dismiss="alert">
+		<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+	</button>
+	Hover your mouse over circles to see contents!
+</div>
+
 <div id="intro">
 	<h1><i class="fa fa-search"></i>about.me</h1>
 	<ul class="ch-grid">
