--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
 <div ng-repeat="project in projects" class="row">
   <div ng-repeat="p in project" class="col-md-4 project-entry">
-    <div class="thumbnail">
+    <div ng-class-odd="'well'" class="thumbnail">
       <img ng-src="img/{{p.img}}">
       <div class="caption">
         <h3>{{p.name}}</h3>
@@ -13,7 +13,5 @@
     </div>
   </div>
 </div>
-
-
 	
 </div>
