--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="lib/angular-1.2.26/angular-route.min.js"></script>
 
 	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
 	<!--<script type="text/javascript" src=""></script>-->
